@@ -10,7 +10,8 @@
     "proofcheck": "npm run compile --silent && node scripts/proofcheck.js",
     "loop": "node -e \"const {spawnSync}=require('child_process');const env={...process.env,WEFTEND_ALLOW_SKIP_RELEASE:'1'};const npmCli=env.npm_execpath||'';if(!npmCli){console.error('Missing npm_execpath.');process.exit(1);}const run=(args)=>{const r=spawnSync(process.execPath,[npmCli,...args],{stdio:'inherit',env});if(r.status!==0)process.exit(r.status||1);};run(['run','compile','--silent']);run(['test']);run(['run','proofcheck']);\"",
     "clean-loop": "node -e \"const {spawnSync}=require('child_process');const env={...process.env,WEFTEND_ALLOW_SKIP_RELEASE:'1'};const npmCli=env.npm_execpath||'';if(!npmCli){console.error('Missing npm_execpath.');process.exit(1);}const run=(args)=>{const r=spawnSync(process.execPath,[npmCli,...args],{stdio:'inherit',env});if(r.status!==0)process.exit(r.status||1);};run(['run','clean']);run(['run','loop']);\"",
-    "release-loop": "node -e \"const {spawnSync}=require('child_process');const env={...process.env};if(!env.WEFTEND_RELEASE_DIR){console.error('Missing WEFTEND_RELEASE_DIR. Set it to a release folder path before running npm run release-loop.');process.exit(1);}const npmCli=env.npm_execpath||'';if(!npmCli){console.error('Missing npm_execpath.');process.exit(1);}console.log(`WEFTEND_RELEASE_DIR=${env.WEFTEND_RELEASE_DIR}`);const run=(args)=>{const r=spawnSync(process.execPath,[npmCli,...args],{stdio:'inherit',env});if(r.status!==0)process.exit(r.status||1);};run(['run','compile','--silent']);run(['test']);run(['run','proofcheck']);\""
+    "release-loop": "node -e \"const {spawnSync}=require('child_process');const env={...process.env};if(!env.WEFTEND_RELEASE_DIR){console.error('Missing WEFTEND_RELEASE_DIR. Set it to a release folder path before running npm run release-loop.');process.exit(1);}const npmCli=env.npm_execpath||'';if(!npmCli){console.error('Missing npm_execpath.');process.exit(1);}console.log(`WEFTEND_RELEASE_DIR=${env.WEFTEND_RELEASE_DIR}`);const run=(args)=>{const r=spawnSync(process.execPath,[npmCli,...args],{stdio:'inherit',env});if(r.status!==0)process.exit(r.status||1);};run(['run','compile','--silent']);run(['test']);run(['run','proofcheck']);\"",
+    "verify:360": "node scripts/verify_360.js"
   },
   "devDependencies": {
     "typescript": "5.9.3"
